"Frame End" timeline point is wrong with UI-side compositing https://bugs.webkit.org/show_bug.cgi?id=249796 rdar://103645351

Reviewed by Simon Fraser.

Have Page::didCompleteRenderingFrame drive InspectorFrameEnd by calling
into InspectorInstrumentation, which calls down into InspectorTimelineAgent.
Instead of incrementing m_runLoopNestingLevel for each InspectorFrameBegin
event, only increment when we have a corresponding didCompleteRenderingFrame
event.

* Source/WebCore/inspector/InspectorInstrumentation.cpp:
(WebCore::InspectorInstrumentation::didCompleteRenderingFrameImpl):
* Source/WebCore/inspector/InspectorInstrumentation.h:
(WebCore::InspectorInstrumentation::eventDidResetAfterDispatch):
(WebCore::InspectorInstrumentation::didCompleteRenderingFrame):
* Source/WebCore/inspector/agents/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::internalStart):
(WebCore::InspectorTimelineAgent::internalStop):
(WebCore::InspectorTimelineAgent::didCompleteRenderingFrame):
* Source/WebCore/inspector/agents/InspectorTimelineAgent.h:
* Source/WebCore/page/Page.cpp:
(WebCore::Page::didCompleteRenderingFrame):

Canonical link: https://commits.webkit.org/263917@main